Added support for GeoIP.conf configuration file template

--- a/templates/GeoIP.conf.erb
+++ b/templates/GeoIP.conf.erb
@@ -4,11 +4,11 @@
 # https://dev.maxmind.com/geoip/updating-databases.
 
 # `AccountID` is from your MaxMind account.
-AccountID <ACCOUNTID>
+AccountID <%= @account_id %>
 
 # Replace LICENSE_KEY with an active license key associated
 # with your MaxMind account.
-LicenseKey <LICENSE_KEY>
+LicenseKey <%= @license_key %>
 
 # `EditionIDs` is from your MaxMind account.
-EditionIDs <FILE_LIST>
+EditionIDs <%= @edition_ids %>
