Adjusted systemd timer and service templates

--- a/templates/geoipupdate-update.service.erb
+++ b/templates/geoipupdate-update.service.erb
@@ -1,7 +1,7 @@
 # Service that updates MaxMind's 'geoipupdate' client
 
 [Unit]
-Description=Updates 'geoipupdate' client
+Description='geoipupdate' client update service
 Wants=geoipupdate-update.timer
 After=network.target
 
