Made some improvements. Removed required init class parameter that specifed the update command.

--- a/templates/geoipupdate-update.service.erb
+++ b/templates/geoipupdate-update.service.erb
@@ -7,7 +7,7 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=<%= @service_update_cmd %>
+ExecStart=<%= @p_update_cmd %>
 
 [Install]
 WantedBy=multi-user.target
