Moved 'target_dir' parameter usage location from the service to the config file

--- a/templates/GeoIP.conf.erb
+++ b/templates/GeoIP.conf.erb
@@ -12,3 +12,6 @@ LicenseKey <%= @license_key %>
 
 # `EditionIDs` is from your MaxMind account.
 EditionIDs <%= @edition_ids %>
+
+# Install databases to a custom directory
+DatabaseDirectory <%= @target_dir %>
