--- a/templates/geoipupdate-update.service.erb
+++ b/templates/geoipupdate-update.service.erb
@@ -6,7 +6,7 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=<%= @package_name %> -f <%= @conf_dir %>/GeoIP.conf
+ExecStart=<%= @package_name %><% if @verbose %> -v<% end %> -f <%= @conf_dir %>/GeoIP.conf
 
 [Install]
 WantedBy=network-online.target
