WIP: check for geoipupdate client version installed or available

--- a/templates/geoipupdate-update.service.erb
+++ b/templates/geoipupdate-update.service.erb
@@ -7,6 +7,7 @@ After=network.target
 [Service]
 Type=simple
 ExecStart=<%= @package_name %><% if @verbose %> -v<% end %> -f <%= @conf_dir %>/GeoIP.conf
+User=<%= @user %>
 
 [Install]
 WantedBy=network-online.target
